# supportforge-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  bootstrap_demo.py  docker-compose.yml  fix_tests.py  fix_tests2.py  pyproject.toml  supportforge_plan.md  test_log.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/schemas/: __init__.py  analytics.py  auth.py  chat.py  conversation.py  failed_query.py  ingest.py  models.py  platform_tenant.py  review.py  tenant.py  widget.py
app/api/v1/: analytics.py  auth.py  chat_router.py  chat_service.py  chat_ws.py  conversations.py  failed_queries.py  ingest.py  models.py  platform_tenants.py  review.py  schemas.py  tenant_secrets.py  tenants.py  voice.py  widget.py
app/core/: __init__.py  config_validators.py  crypto.py  dependencies.py  event_hooks.py  events.py  exceptions.py  middleware.py  security.py  tenant_config.py  widget_token.py
app/domain/: __init__.py
app/domain/interfaces/: cache.py  llm_provider.py  repository.py  reranker.py  stt_provider.py  tts_provider.py  vector_store.py
app/domain/models/: analytics.py  conversation.py  document.py  enums.py  failed_query.py  tenant.py  user.py  voice.py
app/domain/services/: analytics_service.py  chat_service.py  content_moderator.py  document_service.py  escalation_detector.py  ingestion_service.py  output_validator.py  tenant_service.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: redis_adapter.py
app/infrastructure/database/: connection.py  models.py
app/infrastructure/llm/: __init__.py  factory.py  gemini_adapter.py  gemini_embedding_adapter.py  ollama_adapter.py
app/infrastructure/reranker/: __init__.py  cross_encoder_reranker.py  factory.py  noop_reranker.py
app/infrastructure/stt/: __init__.py  azure_adapter.py  factory.py  whisper_adapter.py
app/infrastructure/tts/: __init__.py  azure_adapter.py  factory.py  piper_adapter.py
app/infrastructure/vectorstore/: __init__.py  chroma_adapter.py  factory.py
app/infrastructure/voice/: __init__.py  pipecat_stt_adapter.py  pipecat_tts_adapter.py  pipeline_factory.py  rag_processor.py
app/infrastructure/websocket/: __init__.py  connection_manager.py
app/rag/: bm25_retriever.py  chunking.py  contextualizer.py  embeddings.py  fusion.py  graph.py  markdown_parser.py  pipeline.py  prompt_builder.py  text_extractor.py
app/rag/tools/: __init__.py  base.py  executor.py  resolver.py  tool_loop.py  webhook.py
app/workers/: __init__.py  ingestion_queue.py  ingestion_worker.py  text_extractor.py
migrations/: 006_add_moderation_audit_columns.sql
scripts/: create_superadmin.py  create_tenant.py  init_db.py  migrate_add_channel.py  seed_demo.py
tests/: conftest.py
tests/integration/api/: __init__.py  test_analytics.py  test_auth.py  test_chat_ws.py  test_conversations.py  test_failed_queries.py  test_health.py  test_ingest.py  test_platform_tenants.py  test_review.py  test_tenants.py  test_test_hook.py  test_voice.py
tests/integration/infrastructure/: __init__.py
tests/unit/: test_chat.py  test_chat_ws.py  test_config.py  test_config_validators.py  test_dependencies.py  test_events.py  test_exceptions.py  test_security.py  test_superadmin.py  test_tenant_voice_config.py  test_widget.py
tests/unit/core/: __init__.py  test_crypto.py  test_event_hooks.py  test_tenant_config.py  test_tenant_config_secrets.py  test_widget_token.py
tests/unit/domain/: test_analytics.py  test_content_moderator.py  test_document_service.py  test_escalation_detector.py  test_failed_query.py  test_ingestion_service.py  test_models.py  test_output_validator.py  test_stt_provider.py  test_tenant_provisioning.py  (+4 more)
(+42 files in other folders)
